Bugfix for style on mobile

--- a/fanta_pcdm_site/static/fanta_pcdm_site/css/leaderboard.css
+++ b/fanta_pcdm_site/static/fanta_pcdm_site/css/leaderboard.css
@@ -119,3 +119,27 @@
   display: inline-flex;
   align-items: center;
 }
+
+
+@media only screen and (max-width: 401px)  {
+  #leaderboard .board-item .card-title {
+    font-size: 32px;
+  }
+
+  #leaderboard .board-item .card-title .points .badge.new {
+    font-size: 1.3rem;
+  }
+
+  span.badge {
+    min-width: 2rem;
+    margin: 0 6px;
+  }
+
+  #leaderboard .board-item .card-content .collapsible .collapsible-header {
+    font-size: 1rem;
+  }
+
+  span.status.badge.new {
+    font-size: 0.7rem;
+  }
+}
